FC=gfortran
AM_FCFLAGS = -llapack
#AM_FCFLAGS = -O2 -ftz -fpe0 -traceback -ftrapuv -vec-report0 -implicitnone -check all -assume byterecl -warn truncated_source -warn argument_checking -warn unused -warn declarations -warn alignments -warn ignore_loc -warn usage
bin_PROGRAMS = $(top_builddir)/bin/MINEOStoDSMmodels  
__top_builddir__bin_MINEOStoDSMmodels_SOURCES =   modules.f90 others.f90 sub.inverse.f90 MINEOStoDSMmodels.f90 
