#AM_FC=$(SEQ_FC)
#AM_FCFLAGS=$(SEQ_FC_FLAGS)
bin_PROGRAMS = $(top_builddir)/bin/ModelDrawer  
FC=ifort
#AM_FCFLAGS = -O2 -ftz -fpe0 -traceback -ftrapuv -qopt-report -implicitnone -check all -assume byterecl -warn truncated_source -warn argument_checking -warn unused -warn declarations -warn alignments -warn ignore_loc -warn usage

__top_builddir__bin_ModelDrawer_SOURCES =   module.f90 others.f90 ModelDrawer-0.1.f90
