FC=ifort
AM_FCFLAGS = -O2 -ftz -fpe0 -traceback -ftrapuv -vec-report0 -implicitnone -check all -assume byterecl -warn truncated_source -warn argument_checking -warn unused -warn declarations -warn alignments -warn ignore_loc -warn usage
bin_PROGRAMS = $(top_builddir)/bin/ReadKernel
__top_builddir__bin_ReadKernel_SOURCES = module.f90 others.f90 ReadKernel-0.0.1.f90
