FC=ifort
#AM_FCFLAGS = -O4 -check nobounds -xAVX -qopt-report -ftz -assume buffered_io -assume byterecl -implicitnone -warn truncated_source -warn argument_checking -warn declarations -warn alignments -warn ignore_loc -warn usage -mcmodel=medium -shared-intel
#AM_FCFLAGS = -O2 -ftz -fpe0 -traceback -ftrapuv -qopt-report -implicitnone -check all -assume byterecl -warn truncated_source -warn argument_checking -warn unused -warn declarations -warn alignments -warn ignore_loc -warn usage
bin_PROGRAMS = $(top_builddir)/bin/ReadKernel
__top_builddir__bin_ReadKernel_SOURCES = module.f90 others.f90 ReadKernel-0.0.1.f90
