include ../../etc/config_calcul/config.h
bin_PROGRAMS = $(top_builddir)/bin/mpiSGTpsv 
__top_builddir__bin_mpiSGTpsv_SOURCES =   trial.f90 rk3.f90 glu2.f90 dcsymbdl.f90 dcsymbdl3.f90 others.f90 calmat.f90 SGTpsv-0.3.3-MPI.f90
#clean-local: clean-local-SGTpsv 
#.PHONY: clean-local-SGTpsv
#clean-local-SGTpsv:
#	rm $(bin_PROGRAMS) *.o *.mod *.optrpt $(top_builddir)/bin/*.optrpt
