#include ../../etc/config_calcul/config.h
bin_PROGRAMS = $(top_builddir)/bin/mpiSGTpsv 
#AM_FCFLAGS = -O4 -check nobounds -xAVX -qopt-report -ftz -assume buffered_io -assume byterecl -implicitnone -warn truncated_source -warn declarations -warn alignments -warn ignore_loc -warn usage -mcmodel=medium -shared-intel
__top_builddir__bin_mpiSGTpsv_SOURCES =   trial.f90 rk3.f90 glu2.f90 dcsymbdl.f90 dcsymbdl3.f90 others.f90 modules.f90 calmat.f90 SGTpsv-MPI.f90
